Update code to 1.18
Compiles, but a ton of TODO comments and quite a few places in armor models and worldgen where I passed a bunch of nulls that don't belong. In other words, this will not run