@@ -7,16 +7,16 @@ import com.google.gson.JsonParseException;
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
 import lombok.extern.log4j.Log4j2;
-import net.minecraft.client.renderer.model.RenderMaterial;
-import net.minecraft.resources.IReloadableResourceManager;
-import net.minecraft.resources.IResource;
-import net.minecraft.resources.IResourceManager;
-import net.minecraft.util.JSONUtils;
-import net.minecraft.util.ResourceLocation;
+import net.minecraft.client.resources.model.Material;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.server.packs.resources.ReloadableResourceManager;
+import net.minecraft.server.packs.resources.Resource;
+import net.minecraft.server.packs.resources.ResourceManager;
+import net.minecraft.util.GsonHelper;
 import net.minecraftforge.client.ForgeHooksClient;
 import net.minecraftforge.eventbus.api.Event;
 import net.minecraftforge.fml.ModLoader;
-import net.minecraftforge.fml.event.lifecycle.IModBusEvent;
+import net.minecraftforge.fml.event.IModBusEvent;
 import slimeknights.tconstruct.common.config.Config;
 import slimeknights.tconstruct.library.TinkerRegistries;
 import slimeknights.tconstruct.library.client.model.tools.MaterialModel;
@@ -38,7 +38,6 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Objects;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -65,7 +64,7 @@ public class ModifierModelManager implements IEarlySafeManagerReloadListener {
    * Initializes this manager, registering it with the resource manager
    * @param manager  Manager
    */
-  public static void init(IReloadableResourceManager manager) {
+  public static void init(ReloadableResourceManager manager) {
     manager.registerReloadListener(INSTANCE);
   }
 
@@ -75,9 +74,9 @@ public class ModifierModelManager implements IEarlySafeManagerReloadListener {
    * @return  JSON object, or null if failed to parse
    */
   @Nullable
-  private static JsonObject getJson(IResource resource) {
+  private static JsonObject getJson(Resource resource) {
     try (BufferedReader reader = new BufferedReader(new InputStreamReader(resource.getInputStream(), StandardCharsets.UTF_8))) {
-      return JSONUtils.parse(reader);
+      return GsonHelper.parse(reader);
     } catch (JsonParseException | IOException e) {
       log.error("Failed to load texture JSON " + resource.getLocation(), e);
       return null;
@@ -109,7 +108,7 @@ public class ModifierModelManager implements IEarlySafeManagerReloadListener {
   }
 
   @Override
-  public void onReloadSafe(IResourceManager manager) {
+  public void onReloadSafe(ResourceManager manager) {
     // fire an event so people can register loaders, was the easiest way to do so after modifiers are registered but before models load
     if (!eventFired) {
       ModLoader.get().postEvent(new ModifierModelRegistrationEvent());
@@ -133,8 +132,7 @@ public class ModifierModelManager implements IEarlySafeManagerReloadListener {
                                           return Stream.empty();
                                         })
                                         .map(ModifierModelManager::getJson)
-                                        .filter(Objects::nonNull)
-                                        .collect(Collectors.toList());
+                                        .filter(Objects::nonNull).toList();
     // first object is bottom most pack, so upper resource packs will replace it
     for (int i = jsonFiles.size() - 1; i >= 0; i--) {
       JsonObject json = jsonFiles.get(i);
@@ -158,7 +156,7 @@ public class ModifierModelManager implements IEarlySafeManagerReloadListener {
               // object means we configure the unbaked model
             } else if (element.isJsonObject()) {
               JsonObject object = element.getAsJsonObject();
-              IUnbakedModifierModel model = getLoader(key, JSONUtils.getAsString(object, "type"));
+              IUnbakedModifierModel model = getLoader(key, GsonHelper.getAsString(object, "type"));
               // configure the model with the given JSON data
               if (model != null) {
                 models.put(modifier, model.configure(object));
@@ -186,7 +184,7 @@ public class ModifierModelManager implements IEarlySafeManagerReloadListener {
    * @param modifierId    Specific modifier ID
    * @return  Path to the modifier
    */
-  private static RenderMaterial getModifierTexture(ResourceLocation modifierRoot, ResourceLocation modifierId, String suffix) {
+  private static Material getModifierTexture(ResourceLocation modifierRoot, ResourceLocation modifierId, String suffix) {
     return ForgeHooksClient.getBlockMaterial(new ResourceLocation(modifierRoot.getNamespace(), modifierRoot.getPath() + modifierId.getNamespace() + "_" + modifierId.getPath() + suffix));
   }
 
@@ -199,14 +197,14 @@ public class ModifierModelManager implements IEarlySafeManagerReloadListener {
    * @return  Texture, or null if missing
    */
   @Nullable
-  private static RenderMaterial getTexture(List<ResourceLocation> modifierRoots, @Nullable Predicate<RenderMaterial> textureAdder, ResourceLocation modifier, String suffix) {
+  private static Material getTexture(List<ResourceLocation> modifierRoots, @Nullable Predicate<Material> textureAdder, ResourceLocation modifier, String suffix) {
     if (textureAdder == null) {
       return null;
     }
 
     // try the non-logging ones first
     for (ResourceLocation root : modifierRoots) {
-      RenderMaterial texture = getModifierTexture(root, modifier, suffix);
+      Material texture = getModifierTexture(root, modifier, suffix);
       if (textureAdder.test(texture)) {
         return texture;
       }
@@ -222,7 +220,7 @@ public class ModifierModelManager implements IEarlySafeManagerReloadListener {
    * @param largeModifierRoots  List of modifier roots for large tools, null if the tool is not large
    * @return  Map of models
    */
-  public static Map<Modifier,IBakedModifierModel> getModelsForTool(List<ResourceLocation> smallModifierRoots, List<ResourceLocation> largeModifierRoots, Collection<RenderMaterial> textures) {
+  public static Map<Modifier,IBakedModifierModel> getModelsForTool(List<ResourceLocation> smallModifierRoots, List<ResourceLocation> largeModifierRoots, Collection<Material> textures) {
     // if we have no modifier models, or both lists of modifier roots are empty, nothing to do
     if (modifierModels.isEmpty() || (smallModifierRoots.isEmpty() && largeModifierRoots.isEmpty())) {
       return Collections.emptyMap();
@@ -232,9 +230,9 @@ public class ModifierModelManager implements IEarlySafeManagerReloadListener {
     ImmutableMap.Builder<Modifier,IBakedModifierModel> modelMap = ImmutableMap.builder();
 
     // create two texture adders, so we only log on the final option if missing
-    Predicate<RenderMaterial> smallTextureAdder = smallModifierRoots.isEmpty() ? null
+    Predicate<Material> smallTextureAdder = smallModifierRoots.isEmpty() ? null
                                                   : MaterialModel.getTextureAdder(smallModifierRoots.get(0), textures, Config.CLIENT.logMissingModifierTextures.get());
-    Predicate<RenderMaterial> largeTextureAdder = largeModifierRoots.isEmpty() ? null
+    Predicate<Material> largeTextureAdder = largeModifierRoots.isEmpty() ? null
                                                   : MaterialModel.getTextureAdder(largeModifierRoots.get(0), textures, Config.CLIENT.logMissingModifierTextures.get());
 
     // load each modifier
